# dot-transcriber

./: .env.example  .gitignore  AIPrompts.md  Cargo.toml  ClaudePrompts.md  README.md  WhereAreWe.md  config.example.toml  initial-prompt.md  where-are-we.md
.claude/: settings.local.json
src/: config.rs  handlers.rs  main.rs  note_generator.rs  ollama.rs  transcription.rs
src/tools/: corrector.rs  mod.rs  note_writer.rs  notes_reader.rs
