[package]
name = "dot_transcriber"
version = "0.1.0"
edition = "2021"

[dependencies]
# Telegram bot framework
teloxide = { version = "0.13", features = ["macros"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Logging
log = "0.4"
pretty_env_logger = "0.5"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"
